Revert display change; Now the screen is jumpy but at least we have button controls. It would be nice if everything could be fixed

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -5,7 +5,14 @@
 	margin-bottom: 22px;
   }
   .carousel_ns > input {
-	display: none;
+	clip: rect(1px, 1px, 1px, 1px);
+	clip-path: inset(50%);
+	height: 1px;
+	width: 1px;
+	margin: -1px;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
   }
   
   .carousel__ns__slides {
